improve audio cnn1d nb

--- a/libretas/2e_speech_cnn1d.ipynb
+++ b/libretas/2e_speech_cnn1d.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torchinfo in /home/richardt/.miniconda3/lib/python3.8/site-packages (0.0.5)\n"
+      "Requirement already satisfied: torchinfo in /home/richardt/.miniconda3/envs/iap/lib/python3.8/site-packages (0.0.8)\n"
      ]
     }
    ],
@@ -797,9 +797,9 @@
     "            nn.Conv1d(in_channels=n_in_channels, \n",
     "                      out_channels=n_channel, \n",
     "                      kernel_size=80, stride=stride),\n",
-    "            nn.BatchNorm1d(n_channel),\n",
+    "            nn.BatchNorm1d(num_features=n_channel),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool1d(kernel_size=4),\n",
+    "            nn.MaxPool1d(kernel_size=4, stride=4),\n",
     "\n",
     "            # bloque conv 2\n",
     "            nn.Conv1d(in_channels=n_channel, \n",
@@ -807,7 +807,7 @@
     "                      kernel_size=3),\n",
     "            nn.BatchNorm1d(num_features=n_channel),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool1d(kernel_size=4),\n",
+    "            nn.MaxPool1d(kernel_size=4, stride=4),\n",
     "\n",
     "        )\n",
     "\n",
@@ -926,7 +926,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9fd9a62cfa34683ba4459841dc98316",
+       "model_id": "4cba91b7bfd645bb9baf4ad615987de1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,26 +941,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E00 loss=[323.26,323.32] acc=[15.96,16.54]\n",
-      "E01 loss=[302.23,302.16] acc=[20.45,21.31]\n",
-      "E02 loss=[286.47,285.17] acc=[22.53,23.30]\n",
-      "E03 loss=[276.58,275.00] acc=[24.47,25.42]\n",
-      "E04 loss=[269.72,268.38] acc=[26.49,27.10]\n",
-      "E05 loss=[262.52,260.77] acc=[28.11,28.63]\n",
-      "E06 loss=[257.63,256.14] acc=[29.11,29.44]\n",
-      "E07 loss=[252.00,250.00] acc=[30.46,31.88]\n",
-      "E08 loss=[249.88,248.08] acc=[31.30,32.52]\n",
-      "E09 loss=[243.86,241.45] acc=[32.45,33.62]\n",
-      "E10 loss=[239.14,236.51] acc=[33.97,35.56]\n",
-      "E11 loss=[237.84,235.88] acc=[33.72,34.83]\n",
-      "E12 loss=[234.76,232.58] acc=[34.77,36.05]\n",
-      "E13 loss=[232.81,230.97] acc=[35.73,36.72]\n",
-      "E14 loss=[231.82,230.27] acc=[35.18,35.67]\n",
-      "E15 loss=[227.41,225.31] acc=[37.26,37.78]\n",
-      "E16 loss=[226.71,224.77] acc=[37.29,37.68]\n",
-      "E17 loss=[227.79,224.82] acc=[36.79,37.54]\n",
-      "E18 loss=[228.01,225.52] acc=[36.63,37.25]\n",
-      "E19 loss=[223.80,221.88] acc=[37.75,38.66]\n"
+      "E00 loss=[323.22,323.28] acc=[15.92,16.42]\n",
+      "E01 loss=[302.22,302.14] acc=[20.47,21.24]\n",
+      "E02 loss=[286.51,285.21] acc=[22.45,23.15]\n",
+      "E03 loss=[276.64,275.05] acc=[24.42,25.38]\n",
+      "E04 loss=[269.78,268.39] acc=[26.44,27.14]\n",
+      "E05 loss=[262.62,260.72] acc=[27.93,28.45]\n",
+      "E06 loss=[257.74,256.29] acc=[29.02,29.29]\n",
+      "E07 loss=[252.00,250.06] acc=[30.37,31.78]\n",
+      "E08 loss=[249.75,247.93] acc=[31.30,32.42]\n",
+      "E09 loss=[243.92,241.73] acc=[32.37,33.36]\n",
+      "E10 loss=[239.17,236.50] acc=[34.03,35.56]\n",
+      "E11 loss=[237.82,235.89] acc=[33.65,34.59]\n",
+      "E12 loss=[234.78,232.50] acc=[34.77,35.96]\n",
+      "E13 loss=[232.92,230.90] acc=[35.68,36.78]\n",
+      "E14 loss=[231.77,230.11] acc=[35.24,35.80]\n",
+      "E15 loss=[227.32,225.12] acc=[37.30,38.04]\n",
+      "E16 loss=[226.93,225.11] acc=[37.26,37.80]\n",
+      "E17 loss=[227.81,224.95] acc=[36.70,37.59]\n",
+      "E18 loss=[227.82,225.48] acc=[36.55,37.51]\n",
+      "E19 loss=[223.96,222.24] acc=[37.58,38.65]\n"
      ]
     }
    ],
