--- a/libretas/3b_transfer_loc.ipynb
+++ b/libretas/3b_transfer_loc.ipynb
@@ -16,7 +16,10 @@
    "source": [
     "# Localización empleando transferencia\n",
     "\n",
-    "<div style=\"text-align: right\"> Bere et Richardt </div>\n",
+    "Curso: [Introducción al Aprendizaje Profundo](http://turing.iimas.unam.mx/~ricardoml/course/iap/). Profesores: [Bere](https://turing.iimas.unam.mx/~bereml/) y [Ricardo](https://turing.iimas.unam.mx/~ricardoml/) Montalvo Lezama.\n",
+    "\n",
+    "---\n",
+    "---\n",
     "\n",
     "En esta libreta entrenaremos un modelo para localización de objetos en el conjunto [Caltech 101](http://www.vision.caltech.edu/Image_Datasets/Caltech101/) empleando trasferencia de conocimiento. Este ejemplo está basado en método presentado en [*OverFeat: Integrated Recognition, Localization and Detection using Convolutional Networks*](https://arxiv.org/abs/1312.6229) de 2014 por Sermanet et al. \n",
     "\n",
